# plover-tregg

./: LICENSE  README.md  pyproject.toml  theory.md
plover_tregg/: system.py
